2009-02-15  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/common.hpp: Fix inconsistance new line(Unix->Windows)
	* cpp/include/openclas/segment.hpp:
	* cpp/include/openclas/utility.hpp:
		Replace WIN32 with _MSC_VER for detection of Visual C++	compiler. 
		Using utf8_codecvt_facet for UTF-8 encoding under Visual C++ compiler.
		under Visual C++. 
		Rename CodePage* to Charset*.
		Remove UCS[2,4]_[BE|LE] support. Keep UTF-8 only.
		Rename code_converter_type to codecvt_t to make it shorter.
		Add make_locale(enum Charset charset) to generate locale by given charset.
	* Add cpp/include/openclas/utf8_codecvt_facet.hpp: Copy utf8_codecvt_facet.hpp from Boost
		to this project for generating std::locale obj for UTF-8 charset under Visual C++, which
		does not support UTF-8 facet in original STL.
	* cpp/src/unit_test/unit_test_utility.hpp: using make_locale(), and add cases for encoding.
	* cpp/src/unit_test/OpenClas_VS2005.vcproj: Minor changes.
	* cpp/script/bom.py: Minor changes for usage().
	* Add cpp/script/chd.cpp: Used for generate "\xab\x23..." like string.

2009-02-15  Tao Wang  <dancefire@gmail.com>

	Appended UTF-8 BOM as prefix for all source code, so that it can be compiled under windows.
	Anyone want to compile the project under Linux, need to run 'bom.py' at the cpp/ directory.

2009-02-15  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/utility.hpp:
	* cpp/src/unit_test/unit_test_utility.hpp: Remove utf7 support since will never use it.
	* Add cpp/script/bom.py: to remove/append UTF-8 BOM leading. It need to be removed before
	compiling under g++, and need to be appended before commit the result to svn repository.

2009-02-15  Tao Wang  <dancefire@gmail.com>

	* Rename cpp/include/openclas/*.h to *.hpp.

2009-02-15  Tao Wang  <dancefire@gmail.com>
﻿
	* Move cpp/src/* to cpp/src/unit_test/*.

2009-02-15  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/segment.h: Add workaround code to undef VC max(a,b) macro.